--- a/README
+++ b/README
@@ -14,10 +14,7 @@ Check back frequently on Grammars/dr_forr/
     It's a 6-part blog series.  He's gone through 3 parts so far
         I'm caught up through part 3
 
-
-While waiting for dr_forr, I'm starting to go through mfriedman's blog.
-    Not finished that yet -- pick up here.
-
+    Part 4 has been posted; work through it.
 
 
 shebang {# {{{
@@ -186,6 +183,10 @@ BLOGS, IRC, etc {{{{
         http://friedo.com/blog/
         He has a lot of p6-related articles, many of them how-tos.  Good place 
         to start.
+
+        I've covered all of his entries up to "Signatures, Part 2" (Feb 5).  
+        His articles are good, check back here periodically to see if he's 
+        posted new stuff.
 
     Will Coleda
         http://blogs.perl.org/users/coke/
