--- a/README
+++ b/README
@@ -14,7 +14,7 @@ Check back frequently on Grammars/dr_forr/
     It's a 6-part blog series.  He's gone through 3 parts so far
         I'm caught up through part 3
 
-    Part 4 has been posted; work through it.
+    Working through part 4.
 
 
 shebang {# {{{
