--- a/tutorials_blogs/perl6/concurrency/README
+++ b/tutorials_blogs/perl6/concurrency/README
@@ -64,11 +64,11 @@ Proc::Async {#{{{
     Jonathan Worthington's video, below.
 
 }#}}}
-Low-level APIs {
+Low-level APIs {#{{{
     The start of the Concurrency section warned me against using these.  So I 
     probably won't bother making a test script, but do want to at least read 
     the section once so it's been pasteurized.
-}
+}#}}}
 
 
 
