--- a/README
+++ b/README
@@ -11,7 +11,7 @@ under ./tutorials/perl6/
 
 
 Currently re-reading tutorials_blogs/perl6/concurrency/ to get promises and 
-supplies more firmly in my head.  Pick up on supplies.
+supplies more firmly in my head.  Pick up on channels.
 
 
 
