--- a/projects/lacuna/README
+++ b/projects/lacuna/README
@@ -1,4 +1,10 @@
 
+
+Left off working on Model::Body.pm.  It compiles, but I haven't tried doing anything with it yet.
+
+
+
+
 - Need to add logging
 
 Classes to add {#{{{
