--- a/README
+++ b/README
@@ -196,6 +196,12 @@ BLOGS, IRC, etc {{{{
     Jonathan Worthington
         https://6guts.wordpress.com/
 
+        I reference this in some of my notes, but there's lots of other good 
+        stuff in here:
+                    http://jnthn.net/papers/2015-fosdem-static-dynamic.pdf
+
+            How to build classes dynamically (p 59)
+
     Zoffix
         http://blogs.perl.org/users/zoffix_znet/
 
