--- a/projects/lacuna/README
+++ b/projects/lacuna/README
@@ -5,8 +5,9 @@
 Classes to add {#{{{
 
     - Empire.pm
+    - Building.pm
     - Ship.pm
-        - Both of these need to be factories like Body.pm is.
+        - These need to be factories like Body.pm is.
         - Body.pm (and possibly other classes) includes its own little 
           mini-ship and empire utility classes.  Those ultimately need to go 
           away, to be replaced by mini-classes in Empire.pm and Ship.pm.  
@@ -22,10 +23,10 @@ HTTP Traffic {#{{{
     I tried switching to HTTP::UserAgent.  In tests, it's able to access https 
     URLs that Net::HTTP is not.
 
-    However, HTTP::UserAgent isn't POSTing properly.  When I send "params", it 
-    must be sent as an array, and HTTP::UserAgent is sending it as a single 
-    scalar value (at least when there's only a single param).  TLE won't 
-    accept that - it requires a single-element array.
+    However, HTTP::UserAgent isn't POSTing properly.  When I send "params" to 
+    a TLE server, it must be sent as an array, and HTTP::UserAgent is sending 
+    it as a single scalar value (at least when there's only a single param).  
+    TLE won't accept that - it requires a single-element array.
 }#}}}
 OpenSSL {#{{{
     
@@ -34,7 +35,7 @@ OpenSSL {#{{{
     The short explanation is that the actual OpenSSL.pm used by Net::HTTP is  
     not able to access TLE https servers.  I had to hack at OpenSSL.pm to get 
     it to work, and that hacked copy is what's in ./lib/ and is what's being 
-    used for network traffic.
+    used by this TLE client for HTTPS network traffic.
 
     My hack is naive, and is likely to cause problems with hitting https URLs 
     other than TLE.  Plus, it could well blow up at any time if the TLE 
