--- a/README
+++ b/README
@@ -10,8 +10,11 @@ under ./tutorials/perl6/
 
 
 
-Currently re-reading tutorials_blogs/perl6/concurrency/ to get promises and 
-supplies more firmly in my head.  Pick up on channels.
+Re-reading tutorials_blogs/perl6/concurrency/ to get promises and supplies 
+more firmly in my head.  Pick up on channels.
+
+
+Currently taking a break from tutorials and working on projects/lacuna.
 
 
 
