--- a/README
+++ b/README
@@ -13,6 +13,9 @@ under ./tutorials/perl6/
 Re-reading tutorials_blogs/perl6/concurrency/ to get promises and supplies 
 more firmly in my head.  Pick up on channels.
 
+Finish reading the advent calendar entry linked in 
+tutorials_blogs/perl6/junction/README.  I left off at the section on regexes.
+
 
 Currently taking a break from tutorials and working on projects/lacuna.
 
