--- a/projects/lacuna/README
+++ b/projects/lacuna/README
@@ -2,19 +2,24 @@
 
 - Need to add logging
 
+- Need to change all module extensions to ".pm6" and delete my vim modelines.
+    - Just change the filenames - nothing in the code needs to change.
 
-- In Building.pm
-    - role_view needs to create a view object of some sort.
-    - Building classes like the PCC that modify that view need to take that 
-      role_view's object and add stuff to it and then return that.
 
-    - I need a class for every building in the game.
-        - Remember that the classname has to match the building's 'type' 
-          attribute (which is the same as the 'url' attribute without the 
-          leading slash).
-        - The name of that attribute does not necessarily match what's linked 
-          from the docs page (eg "LostCityOfTyleon" is linked, but there are 
-          9 classes involved there - 'lcota', 'lcotb', etc.)
+
+Only GL::Account does Comms now.  GL::Model no longer does Comms.
+
+
+
+
+- I'm having a tough time breaking Building.pm out into constituent modules.  
+  I put everything back (into the single Building.pm), and test.p6 now works 
+  again.
+    - But I really need to get that broken out.
+    - While working on that, see Body/OwnBodyRole.  It's creating a Body 
+      object, which is part of what's causing the problem.  It might be worth 
+      creating a temporary Body class actually inside OwnBodyRole until I can 
+      get the Building stuff straightened out.
 
 
 
